--- a/_posts/2018-06-24-how-to-write-a-blog.html
+++ b/_posts/2018-06-24-how-to-write-a-blog.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 title:  "Welcome to Jekyll!"
-date:   2018-06-124 16:16:01 -0600
-categories: jekyll update
 ---
 
-## 你好，这是第一篇博客。
+<p> 你好，这是第一篇博客。</p>
